--- a/LEDBoard/Base.lproj/Main.storyboard
+++ b/LEDBoard/Base.lproj/Main.storyboard
@@ -61,9 +61,8 @@
                                     <constraint firstItem="s20-jy-9G1" firstAttribute="leading" secondItem="cue-ng-ins" secondAttribute="trailing" constant="15" id="pDw-cf-rmz"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Mbk-QK-uYG">
-                                <rect key="frame" x="93" y="166.5" width="710" height="81.5"/>
-                                <string key="text">LABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABELLABEL</string>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Mbk-QK-uYG">
+                                <rect key="frame" x="448" y="207" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
